--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -158,6 +158,10 @@
       line-height: .58rem;
       font-size: .2rem;
     }
+    .el-cascader{
+      line-height: .58rem;
+      font-size: .2rem;
+    }
   }
 
   .el-menu {
