--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -258,6 +258,6 @@
 .dialog--foot {
   padding: .24rem 1.4rem;
 }
-.nocolor--btn {
-  margin-left: .24rem;
+.color--btn {
+  margin-right: .24rem;
 }
